# semiconductor-device-physics-benchmark

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new_question.yml  question_error.yml
.github/workflows/: validate-benchmark.yml
benchmark/: combined_chat_messages_test.jsonl  combined_test.jsonl  mos_capacitor_test.jsonl  mosfet_test.jsonl  pn_junction_test.jsonl
docs/: benchmark_design.md  contributing_questions.md  question_taxonomy.md  scoring_methodology.md
examples/: example_model_response.jsonl  example_scoring_report.json
private/: answer_key.example.jsonl
prompts/: evaluation_system_prompt.txt  reasoning_evaluation_prompt.txt
schemas/: question.schema.json  response.schema.json
scripts/: calculate_calibration.py  common.py  generate_summary.py  score_responses.py  validate_dataset.py  validate_responses.py
tests/: test_dataset_validation.py  test_response_validation.py  test_scoring.py
